--- a/index.html
+++ b/index.html
@@ -955,38 +955,6 @@
 
         <div id="treatment-text" style="display: none; margin-bottom: 10px;"></div>
 
-        <div id="male" class="menu-section">
-            <div class="labeltyuuou">
-                <span class="highlight-text">◆ヘアー：担当者◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">名雪</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">青木</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">指名なし</button>
-            </div>
-        </div>
-
-        <div id="female" class="menu-section">
-            <div class="labeltyuuou">
-                <span class="highlight-text">◆ネイル：担当者◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">根本</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">町田</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">指名なし</button>
-            </div>
-        </div>
-
-        <div id="whitening" class="menu-section">
-            <div class="labeltyuuou">
-                <span class="highlight-text">◆まつ毛：担当者◆</span>
-            </div>
-            <div class="symptoms">
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">名雪</button>
-                <button type="button" onclick="selectSymptom(this)" data-price="15000">指名なし</button>
-            </div>
-        </div>
-
 <!-- ② HTML：各ブロックの「日付入力」をラップして“日付を選択”を重ねる -->
 <div class="labelkibounitizi">希望日時<span class="required">必須</span></div>
 <div class="datetime-wrapper" style="text-align: center;">
@@ -1231,18 +1199,8 @@ function formatDateTime(dateTimeString) {
         </div>
         <hr>
         <div class="info-row">
-            <p>${visitCountText}</p>
-            <button class="edit-button" onclick="scrollToElement('firstVisit')">修正</button>
-        </div>
-        <hr>
-        <div class="info-row">
             <p>${selectedMenuText}</p>
             <button class="edit-button" onclick="scrollToElement('course')">修正</button>
-        </div>
-        <hr>
-        <div class="info-row">
-            <p>${selectedSymptomText}</p>
-            <button class="edit-button" onclick="scrollToElement('beautifuleyebrows'); scrollToElement('shinyskin'); scrollToElement('Cosmetologyasawhole');">修正</button>
         </div>
         <hr>
         <div class="info-row">
@@ -1318,91 +1276,63 @@ function formatDateTime(dateTimeString) {
             });
         });
 
-  const JP_WD = ['日','月','火','水','木','金','土'];
-  const pad = n => String(n).padStart(2,'0');
+const JP_WD = ['日','月','火','水','木','金','土'];
+const pad = n => String(n).padStart(2,'0');
 
-  function toISODateTimeLocal(dayStr, timeStr) {
-    if (!dayStr || !timeStr) return "";
-    return `${dayStr}T${timeStr}`;
-  }
-
-  // 日付セレクト：今日から 'days' 日ぶんの候補を作る（月曜・火曜は除外）
-  function buildDateOptions(selectEl, days = 120, startDate = new Date()) {
-    const d = new Date(startDate.getFullYear(), startDate.getMonth(), startDate.getDate());
-    selectEl.innerHTML = '<option value="" disabled selected>日付を選択</option>';
-
-    for (let i = 0; i < days; i++) {
-      const wd = d.getDay(); // 0=日曜 … 6=土曜
-
-      // ★月曜(1)と火曜(2)はスキップ
-      if (wd !== 1 && wd !== 2) {
-        const y = d.getFullYear();
-        const m = pad(d.getMonth() + 1);
-        const day = pad(d.getDate());
-        const value = `${y}-${m}-${day}`;
-        const label = `${y}/${m}/${day}（${JP_WD[wd]}）`;
-
-        const opt = document.createElement('option');
-        opt.value = value;
-        opt.textContent = label;
-        selectEl.appendChild(opt);
-      }
-
-      d.setDate(d.getDate() + 1);
-    }
-  }
-
-  // 曜日ごとの営業時間設定（0=日曜, 1=月曜, …, 6=土曜）
-  const WEEKLY_HOURS = {
-    0: { start: 10, end: 16 }, // 日曜 10:00〜16:30
-    1: { start: 10, end: 18 }, // 月曜 10:00〜18:30
-    2: { start: 10, end: 18 }, // 火曜 10:00〜18:30
-    3: { start: 10, end: 18 }, // 水曜
-    4: { start: 10, end: 18 }, // 木曜
-    5: { start: 10, end: 18 }, // 金曜
-    6: { start: 10, end: 16 }  // 土曜 10:00〜16:30
-  };
-
-// 指定曜日の12:00〜の休憩帯を除外（上限を含む）
-function isBlockedTime(weekday, h, m) {
-  const minutes = h * 60 + m;
-
-  // 平日（月〜金＝1..5）：12:00 <= t <= 13:30
-  if (weekday >= 1 && weekday <= 5) {
-    if (minutes >= 12 * 60 && minutes <= 13 * 60 + 30) return true;
-  }
-
-  // 土日（日=0, 土=6）：12:00 <= t <= 13:00
-  if (weekday === 0 || weekday === 6) {
-    if (minutes >= 12 * 60 && minutes <= 13 * 60) return true;
-  }
-
-  return false;
+function toISODateTimeLocal(dayStr, timeStr) {
+  if (!dayStr || !timeStr) return "";
+  return `${dayStr}T${timeStr}`;
 }
 
-  // 時間セレクト生成（曜日ごと）
-  function buildHalfHourOptions(selectEl, weekday) {
-    selectEl.innerHTML = '<option value="" disabled selected>時間を選択</option>';
+// 日付セレクト：今日から 'days' 日ぶんの候補を作る（制限なし）
+function buildDateOptions(selectEl, days = 120, startDate = new Date()) {
+  const d = new Date(startDate.getFullYear(), startDate.getMonth(), startDate.getDate());
+  selectEl.innerHTML = '<option value="" disabled selected>日付を選択</option>';
 
-    // 月曜・火曜は日付自体を出していないが、万一選ばれた場合は時間を出さない
-    if (weekday === 1 || weekday === 2) return;
+  for (let i = 0; i < days; i++) {
+    const wd = d.getDay(); // 0=日曜 … 6=土曜
+    const y = d.getFullYear();
+    const m = pad(d.getMonth() + 1);
+    const day = pad(d.getDate());
+    const value = `${y}-${m}-${day}`;
+    const label = `${y}/${m}/${day}（${JP_WD[wd]}）`;
 
-    const { start, end } = WEEKLY_HOURS[weekday] || { start: 0, end: 23 };
+    const opt = document.createElement('option');
+    opt.value = value;
+    opt.textContent = label;
+    selectEl.appendChild(opt);
 
-    for (let h = start; h <= end; h++) {
-      for (const m of [0, 30]) {
-        // ★休憩帯はスキップ（選択肢に出さない）
-        if (isBlockedTime(weekday, h, m)) continue;
+    d.setDate(d.getDate() + 1);
+  }
+}
 
-        const hh = pad(h);
-        const mm = pad(m);
-        const opt = document.createElement('option');
-        opt.value = `${hh}:${mm}`;
-        opt.textContent = `${hh}:${mm}`;
-        selectEl.appendChild(opt);
-      }
+const WEEKLY_HOURS = {
+  0: { start: 9, end: 19 },
+  1: { start: 9, end: 19 },
+  2: { start: 9, end: 19 },
+  3: { start: 9, end: 19 },
+  4: { start: 9, end: 19 },
+  5: { start: 9, end: 19 },
+  6: { start: 9, end: 19 }
+};
+
+function buildHalfHourOptions(selectEl, weekday) {
+  selectEl.innerHTML = '<option value="" disabled selected>時間を選択</option>';
+  const { start, end } = WEEKLY_HOURS[weekday];
+
+  for (let h = start; h <= end; h++) {
+    for (const m of [0, 30]) {
+      if (h === 9 && m === 0) continue; // 09:00をスキップ
+      if (h === end && m === 30) continue; // 19:30は出さない
+      const hh = pad(h);
+      const mm = pad(m);
+      const opt = document.createElement('option');
+      opt.value = `${hh}:${mm}`;
+      opt.textContent = `${hh}:${mm}`;
+      selectEl.appendChild(opt);
     }
   }
+}
 
   // 既存の updateHiddenAndPlaceholder にこの1行を追加（表示用更新）
   function updateHiddenAndPlaceholder(baseId) {
@@ -1748,7 +1678,6 @@ function showMenu(menu) {
                 phone: document.getElementById('phone').value.trim(),
                 visitCount: visitCount,
                 selectedMenu: selectedMenu,
-                selectedSymptom: selectedSymptom && selectedSymptom.length > 0 ? selectedSymptom : "指名なし", // 空なら「指名なし」
                 irradiationsCount: irradiationsCount,
                 dates: [
                     document.getElementById('date1').value,
@@ -1782,7 +1711,7 @@ function showMenu(menu) {
             // LINEトークにメッセージを送信
             liff.sendMessages([{
                 type: 'text',
-                text: `【美郷台店：予約】\n《お名前》${formData.name}\n《電話番号》${formData.phone}\n\n《メニュー》：${formData.selectedMenu}\n《指名》：${formData.selectedSymptom}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\n《メッセージ》\n${formData.message}`
+                text: `【美郷台店：予約】\n《お名前》${formData.name}\n《電話番号》${formData.phone}\n\n《メニュー》：${formData.selectedMenu}\n\n【希望日時】\n《第一希望日》\n${formatDate(formData.dates[0])}\n\n《第二希望日》\n${formatDate(formData.dates[1])}\n\n《第三希望日》\n${formatDate(formData.dates[2])}\n\n《メッセージ》\n${formData.message}`
             }]).then(() => {
                 /* メッセージ送信成功時の処理 */
                 alert('確認してご連絡差し上げます。');
