--- a/index.html
+++ b/index.html
@@ -249,31 +249,35 @@
             color: #141414;
         }
 
-/* 二列レイアウトはそのまま */
+/* ベース：二列レイアウトそのまま（PC/タブレットは自由） */
 .irradiations {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 8px 10px;
+  gap: 8px 10px; /* 縦:8px / 横:10px */
 }
 
+/* ボタン共通 */
 .irradiations button {
-  flex: 0 0 calc(40% - 5px);
+  /* 可変幅（PC/タブレット） */
+  flex: 0 0 auto;
   width: auto;
+  min-width: 0;             /* はみ出し防止（iOS対策） */
+  box-sizing: border-box;
+
   padding: 8px 6px;
   font-size: 11.5px;
   line-height: 1.2;
   white-space: normal;
   text-align: center;
-  box-sizing: border-box;
 
-  /* ▼ 下にテキストを入れるための縦積み */
+  /* 下に説明テキストを積む */
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-/* 下1行テキスト → 2行まで許可＆省略（三点リーダ） */
+/* 下1行テキスト（data-note）→ 最大3行で省略 */
 .irradiations button::after {
   content: attr(data-note);
   display: -webkit-box;
@@ -281,8 +285,8 @@
   -webkit-box-orient: vertical;
   overflow: hidden;
 
-  /* 改行コード（LF）を描画する */
-  white-space: pre-line;        /* ← これを追加 */
+  /* 改行(LF)を反映 */
+  white-space: pre-line;
   line-height: 1.3;
   max-height: calc(1.3em * 3);
   width: 100%;
@@ -292,13 +296,28 @@
   color: #666;
 }
 
-/* 念のため：ボタン内で縦積み */
-.irradiations button {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+/* ▼スマホ（横幅768px以下）は“必ず2列” */
+@media (max-width: 768px) {
+  .irradiations {
+    gap: 10px; /* 指で押しやすいよう少し広め */
+  }
+
+  .irradiations button {
+    /* 2列＝それぞれ約50%幅（横gap10pxの半分を相殺） */
+    flex: 0 0 calc(50% - 5px);
+    max-width: calc(50% - 5px);
+    font-size: 12px;  /* 視認性を少しUP */
+    line-height: 1.25;
+  }
 }
 
+必要なら“超狭小端末”用（任意）
+@media (max-width: 360px) {
+  .irradiations button {
+    font-size: 11.5px;
+    padding: 8px 4px;
+  }
+}
         .menu-sections {
             display: flex;
             flex-direction: column;
