--- a/index.html
+++ b/index.html
@@ -310,14 +310,6 @@
     line-height: 1.25;
   }
 }
-
-必要なら“超狭小端末”用（任意）
-@media (max-width: 360px) {
-  .irradiations button {
-    font-size: 11.5px;
-    padding: 8px 4px;
-  }
-}
         .menu-sections {
             display: flex;
             flex-direction: column;
@@ -1260,7 +1252,7 @@
         <button type="button" onclick="selectirradiations(this)"
                 data-price="15000" data-note="料金：8000円">ナチュラル（80束以内）</button>
         <button type="button" onclick="selectirradiations(this)"
-                data-price="15000" data-note="料金：10000円">スタンダート（140束以内）</button>
+                data-price="15000" data-note="料金：10000円">スタンダート<br>（140束以内）</button>
         <button type="button" onclick="selectirradiations(this)"
                 data-price="15000" data-note="料金：12000円">付け放題（フル装着）</button>
       </div>
@@ -1343,11 +1335,11 @@
         <span class="highlight-text">デザインキープラッシュオプション<br>お選びください</span>
       </div>
       <div class="irradiations">
-        <button type="button" onclick="selectirradiations(this)" data-price="15000" data-note="料金：6500円">３週間以内ナチュラルリペア</button>
-        <button type="button" onclick="selectirradiations(this)" data-price="15000" data-note="料金：8000円">３週間以内スタンダートリペア</button>
+        <button type="button" onclick="selectirradiations(this)" data-price="15000" data-note="料金：6500円">３週間以内<br>ナチュラルリペア</button>
+        <button type="button" onclick="selectirradiations(this)" data-price="15000" data-note="料金：8000円">３週間以内vスタンダートリペア</button>
         <button type="button" onclick="selectirradiations(this)" data-price="15000" data-note="料金：9000円">３週間以内付け放題</button>
         <button type="button" onclick="selectirradiations(this)" data-price="15000" data-note="料金：7000円">4週間以内ナチュラルリペア</button>
-        <button type="button" onclick="selectirradiations(this)" data-price="15000" data-note="料金：9000円">4週間以内スタンダートリペア</button>
+        <button type="button" onclick="selectirradiations(this)" data-price="15000" data-note="料金：9000円">4週間以内<br>スタンダートリペア</button>
         <button type="button" onclick="selectirradiations(this)" data-price="15000" data-note="料金：10000円">4週間以内付け放題</button>
       </div>
     </div>
